[gd_scene load_steps=35 format=3 uid="uid://k51bbmqpra1d"]

[ext_resource type="Script" path="res://Scripts/Scene_Scripts/Cine_Outro_02_TruckStop.gd" id="1_7wmxh"]
[ext_resource type="PackedScene" uid="uid://1kusc5juq828" path="res://Scenes/Prefabs/Shared_CanvasModulate.tscn" id="2_ciraw"]
[ext_resource type="Texture2D" uid="uid://c3d7xbp2kevfd" path="res://Sprites/SetDressing/dumpster.png" id="5_8p3bg"]
[ext_resource type="Texture2D" uid="uid://b2n6s2t8aiwb8" path="res://Sprites/Environment/Road/Road_Asphalt_256_Diffuse.png" id="6_0dreu"]
[ext_resource type="PackedScene" uid="uid://dqx6vc23q8te7" path="res://Scenes/Prefabs/GasPump.tscn" id="9_8wiff"]
[ext_resource type="Texture2D" uid="uid://u8kjj3v4rnff" path="res://Sprites/Environment/Grass_Tiled.png" id="10_iaapk"]
[ext_resource type="Texture2D" uid="uid://bw7i03m4bb7ha" path="res://Sprites/1x1white.png" id="10_nqgc6"]
[ext_resource type="PackedScene" uid="uid://seuyyo3omuoe" path="res://Scenes/Actors/PlayerCar.tscn" id="16_v42xa"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/phantom_camera/phantom_camera_2D.gd" id="17_vyx60"]
[ext_resource type="Curve2D" uid="uid://bajfhrhbojind" path="res://Customs/Curves/RoadPieces/Cine_Outro_02_TruckStop.tres" id="17_weurp"]
[ext_resource type="Script" path="res://addons/phantom_camera/scripts/resources/tween_resource.gd" id="18_7dn4d"]
[ext_resource type="Curve" uid="uid://bdfny0nh843ha" path="res://Customs/Curves/CineIntro02_StaticTireTrackWidth_Curve.tres" id="19_veap2"]
[ext_resource type="Gradient" uid="uid://di41x4u2d46ju" path="res://Customs/Gradients/TireTrackColor_Gradient.tres" id="20_2olnn"]
[ext_resource type="Curve2D" uid="uid://co0apr75bvcal" path="res://Customs/Curves/RoadPieces/Cine_Outro_02_TruckStop_AccessRoad.tres" id="20_3dk5m"]
[ext_resource type="Script" path="res://addons/linepath2d/linepath2d.gd" id="22_kj5if"]
[ext_resource type="Texture2D" uid="uid://cxym1lqfpdf3" path="res://Sprites/Environment/Road/Road007_256-PNG_Color.png" id="23_5eyvx"]
[ext_resource type="Texture2D" uid="uid://dii42whr8jsn6" path="res://Sprites/Environment/Road/Road007_256-PNG_Normal-DX.png" id="24_avvvt"]
[ext_resource type="Texture2D" uid="uid://byxi35s8xcf8l" path="res://Sprites/Environment/Road/Road007_256-PNG_Specular-Roughness.png" id="25_6b3sq"]
[ext_resource type="Texture2D" uid="uid://dq6koupunqtky" path="res://Sprites/Environment/Road/Gravel039_256_Diffuse.png" id="26_2v70e"]
[ext_resource type="Texture2D" uid="uid://bfkehd00r68se" path="res://Sprites/Environment/Road/Gravel039_256_NormalDX.png" id="27_umxys"]
[ext_resource type="Texture2D" uid="uid://dwe12ljcmuli2" path="res://Sprites/Environment/Road/Gravel039_256_Specular.png" id="28_tkv2v"]

[sub_resource type="Gradient" id="Gradient_ac555"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.290323, 1)
colors = PackedColorArray(0.75, 0.75, 0.75, 1, 0.267421, 0.278472, 0.281787, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_e06pa"]
gradient = SubResource("Gradient_ac555")
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0.5)

[sub_resource type="Gradient" id="Gradient_7ehd4"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.429553, 1)
colors = PackedColorArray(0.94902, 0.988235, 1, 1, 0.267421, 0.278472, 0.281787, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ktswb"]
gradient = SubResource("Gradient_7ehd4")
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0.5)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jat4e"]
light_mode = 1

[sub_resource type="Resource" id="Resource_6ohsy"]
script = ExtResource("18_7dn4d")
duration = 0.0
transition = 0
ease = 2

[sub_resource type="CanvasTexture" id="CanvasTexture_3c3ri"]
diffuse_texture = ExtResource("6_0dreu")
texture_filter = 1
texture_repeat = 2

[sub_resource type="TileMapPattern" id="TileMapPattern_sec7e"]
tile_data = PackedInt32Array(0, 720896, 13, 65536, 786432, 2, 1, 786432, 2, 65537, 720896, 13)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mvsvr"]
resource_name = "Grass_Tiled"
texture = ExtResource("10_iaapk")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_p07g5"]
tile_size = Vector2i(256, 256)
sources/1 = SubResource("TileSetAtlasSource_mvsvr")
pattern_0 = SubResource("TileMapPattern_sec7e")

[sub_resource type="Curve" id="Curve_5n1tl"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="CanvasTexture" id="CanvasTexture_3eptj"]
diffuse_texture = ExtResource("23_5eyvx")
normal_texture = ExtResource("24_avvvt")
specular_texture = ExtResource("25_6b3sq")
specular_shininess = 0.1
texture_filter = 1
texture_repeat = 2

[sub_resource type="CanvasTexture" id="CanvasTexture_xxt0j"]
diffuse_texture = ExtResource("26_2v70e")
normal_texture = ExtResource("27_umxys")
specular_texture = ExtResource("28_tkv2v")
specular_shininess = 0.1
texture_filter = 1
texture_repeat = 2

[node name="Cine_Intro_02_GasStation" type="Node2D"]
position = Vector2(-806, -142)
script = ExtResource("1_7wmxh")
SceneLoadOptions = {
"animation_name": null,
"animation_name_enter": null,
"animation_name_leave": null,
"color": Color(0, 0, 0, 1),
"ease": 1.0,
"ease_enter": 1.0,
"ease_leave": 1.0,
"invert": false,
"invert_on_leave": true,
"pattern": "fade",
"skip_fade_in": false,
"skip_fade_out": false,
"skip_scene_change": false,
"speed": 1,
"wait_time": 2.0
}

[node name="Timers" type="Node" parent="."]

[node name="Timer_ToFirstDialogue" type="Timer" parent="Timers"]
wait_time = 2.25
one_shot = true
autostart = true

[node name="Timer_ToExit" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="Lighting" type="Node" parent="."]

[node name="CanvasModulate" parent="Lighting" instance=ExtResource("2_ciraw")]

[node name="PointLight2D2" type="PointLight2D" parent="Lighting"]
position = Vector2(-335, -500)
rotation = 3.14159
scale = Vector2(20, 20)
color = Color(1, 0.839216, 0.666667, 1)
energy = 0.3
shadow_filter = 1
shadow_filter_smooth = 1.0
texture = SubResource("GradientTexture2D_e06pa")
height = 100.0

[node name="PointLight2D" type="PointLight2D" parent="Lighting"]
position = Vector2(-700, -36)
rotation = -1.5708
scale = Vector2(21.5591, 21.5591)
color = Color(1, 0.839216, 0.666667, 1)
energy = 0.35
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 1.0
texture = SubResource("GradientTexture2D_e06pa")
height = 100.0

[node name="GasStationLight" type="PointLight2D" parent="Lighting"]
position = Vector2(-911, -2)
scale = Vector2(24.1562, 24.1562)
color = Color(1, 0.839216, 0.666667, 1)
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 1.0
texture = SubResource("GradientTexture2D_ktswb")
height = 100.0

[node name="PlayerCar" parent="." groups=["scene_manager_entity_nodes"] instance=ExtResource("16_v42xa")]
rotation = 3.14159
controlMode = 3
lightsOn = false
scriptSpeed = 0.0
scriptRPM = 0.0
metadata/entity_name = "PlayerCar"
metadata/_edit_lock_ = true

[node name="CameraTarget_01" type="Node2D" parent="PlayerCar"]
position = Vector2(-55.65, -50)
rotation = 3.14159

[node name="PhantomCamera2D_01" type="Node2D" parent="."]
material = SubResource("CanvasItemMaterial_jat4e")
position = Vector2(55.6501, 49.9999)
script = ExtResource("17_vyx60")
priority_override = false
priority = 1
zoom = Vector2(0.8, 0.8)
follow_mode = 1
follow_target = NodePath("../PlayerCar/CameraTarget_01")
follow_parameters/damping = false
frame_preview = true
pixel_perfect = false
limit/draw_limits = true
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
limit/limit_node_target = NodePath("")
limit/smoothed = false
tween_parameters = SubResource("Resource_6ohsy")
tween_on_load = true
inactive_update_mode = 0
metadata/_edit_lock_ = true

[node name="Environment" type="Node" parent="."]

[node name="TruckStopPavement" type="TextureRect" parent="Environment"]
z_index = -1
offset_left = -2161.0
offset_top = -559.0
offset_right = -266.0
offset_bottom = 1081.0
texture = SubResource("CanvasTexture_3c3ri")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="SetDressing" type="Node2D" parent="Environment"]
position = Vector2(732, 0)
metadata/_edit_lock_ = true

[node name="Dumpster" type="Sprite2D" parent="Environment/SetDressing"]
position = Vector2(-1949, 411)
texture = ExtResource("5_8p3bg")

[node name="Pumps" type="Node2D" parent="Environment/SetDressing"]
position = Vector2(-1300, 0)

[node name="Pump1" parent="Environment/SetDressing/Pumps" instance=ExtResource("9_8wiff")]

[node name="Pump2" parent="Environment/SetDressing/Pumps" instance=ExtResource("9_8wiff")]
position = Vector2(0, 80)

[node name="StationSprite" type="Sprite2D" parent="Environment/SetDressing"]
position = Vector2(-1828, 44)
scale = Vector2(400, 650)
texture = ExtResource("10_nqgc6")
metadata/_edit_lock_ = true

[node name="TileMap_Ground" type="TileMap" parent="Environment"]
z_index = -2
position = Vector2(64, 0)
tile_set = SubResource("TileSet_p07g5")
format = 2
layer_0/tile_data = PackedInt32Array(-393229, 1, 0, -327693, 1, 0, -262157, 1, 0, -196621, 1, 0, -131085, 1, 0, -65549, 1, 0, -13, 1, 0, 65523, 1, 0, 131059, 1, 0, 196595, 1, 0, 262131, 1, 0, 327667, 1, 0, 393203, 1, 0, 458739, 1, 0, -393228, 1, 0, -327692, 1, 0, -262156, 1, 0, -196620, 1, 0, -131084, 1, 0, -65548, 1, 0, -12, 1, 0, 65524, 1, 0, 131060, 1, 0, 196596, 1, 0, 262132, 1, 0, 327668, 1, 0, 393204, 1, 0, 458740, 1, 0, -393227, 1, 0, -327691, 1, 0, -262155, 1, 0, -196619, 1, 0, -131083, 1, 0, -65547, 1, 0, -11, 1, 0, 65525, 1, 0, 131061, 1, 0, 196597, 1, 0, 262133, 1, 0, 327669, 1, 0, 393205, 1, 0, 458741, 1, 0, -393226, 1, 0, -327690, 1, 0, -262154, 1, 0, -196618, 1, 0, -131082, 1, 0, -65546, 1, 0, -10, 1, 0, 65526, 1, 0, 131062, 1, 0, 196598, 1, 0, 262134, 1, 0, 327670, 1, 0, 393206, 1, 0, 458742, 1, 0, -393225, 1, 0, -327689, 1, 0, -262153, 1, 0, -196617, 1, 0, -131081, 1, 0, -65545, 1, 0, -9, 1, 0, 65527, 1, 0, 131063, 1, 0, 196599, 1, 0, 262135, 1, 0, 327671, 1, 0, 393207, 1, 0, 458743, 1, 0, -393224, 1, 0, -327688, 1, 0, -262152, 1, 0, -196616, 1, 0, -131080, 1, 0, -65544, 1, 0, -8, 1, 0, 65528, 1, 0, 131064, 1, 0, 196600, 1, 0, 262136, 1, 0, 327672, 1, 0, 393208, 1, 0, 458744, 1, 0, -393223, 1, 0, -327687, 1, 0, -262151, 1, 0, -196615, 1, 0, -131079, 1, 0, -65543, 1, 0, -7, 1, 0, 65529, 1, 0, 131065, 1, 0, 196601, 1, 0, 262137, 1, 0, 327673, 1, 0, 393209, 1, 0, 458745, 1, 0, -393222, 1, 0, -327686, 1, 0, -262150, 1, 0, -196614, 1, 0, -131078, 1, 0, -65542, 1, 0, -6, 1, 0, 65530, 1, 0, 131066, 1, 0, 196602, 1, 0, 262138, 1, 0, 327674, 1, 0, 393210, 1, 0, 458746, 1, 0, -393221, 1, 0, -327685, 1, 0, -262149, 1, 0, -196613, 1, 0, -131077, 1, 0, -65541, 1, 0, -5, 1, 0, 65531, 1, 0, 131067, 1, 0, 196603, 1, 0, 262139, 1, 0, 327675, 1, 0, 393211, 1, 0, 458747, 1, 0, -393220, 1, 0, -327684, 1, 0, -262148, 1, 0, -196612, 1, 0, -131076, 1, 0, -65540, 1, 0, -4, 1, 0, 65532, 1, 0, 131068, 1, 0, 196604, 1, 0, 262140, 1, 0, 327676, 1, 0, 393212, 1, 0, 458748, 1, 0, -393219, 1, 0, -327683, 1, 0, -262147, 1, 0, -196611, 1, 0, -131075, 1, 0, -65539, 1, 0, -3, 1, 0, 65533, 1, 0, 131069, 1, 0, 196605, 1, 0, 262141, 1, 0, 327677, 1, 0, 393213, 1, 0, 458749, 1, 0, -393218, 1, 0, -327682, 1, 0, -262146, 1, 0, -196610, 1, 0, -131074, 1, 0, -65538, 1, 0, -2, 1, 0, 65534, 1, 0, 131070, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 393214, 1, 0, 458750, 1, 0, -393217, 1, 0, -327681, 1, 0, -262145, 1, 0, -196609, 1, 0, -131073, 1, 0, -65537, 1, 0, -1, 1, 0, 65535, 1, 0, 131071, 1, 0, 196607, 1, 0, 262143, 1, 0, 327679, 1, 0, 393215, 1, 0, 458751, 1, 0, -458752, 1, 0, -393216, 1, 0, -327680, 1, 0, -262144, 1, 0, -196608, 1, 0, -131072, 1, 0, -65536, 1, 0, 0, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 327680, 1, 0, 393216, 1, 0, -458751, 1, 0, -393215, 1, 0, -327679, 1, 0, -262143, 1, 0, -196607, 1, 0, -131071, 1, 0, -65535, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 327681, 1, 0, 393217, 1, 0, -458750, 1, 0, -393214, 1, 0, -327678, 1, 0, -262142, 1, 0, -196606, 1, 0, -131070, 1, 0, -65534, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 327682, 1, 0, 393218, 1, 0, -458749, 1, 0, -393213, 1, 0, -327677, 1, 0, -262141, 1, 0, -196605, 1, 0, -131069, 1, 0, -65533, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 1, 0, 327683, 1, 0, 393219, 1, 0, -458748, 1, 0, -393212, 1, 0, -327676, 1, 0, -262140, 1, 0, -196604, 1, 0, -131068, 1, 0, -65532, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 1, 0, 327684, 1, 0, 393220, 1, 0, -458747, 1, 0, -393211, 1, 0, -327675, 1, 0, -262139, 1, 0, -196603, 1, 0, -131067, 1, 0, -65531, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, 393221, 1, 0, -458746, 1, 0, -393210, 1, 0, -327674, 1, 0, -262138, 1, 0, -196602, 1, 0, -131066, 1, 0, -65530, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, 393222, 1, 0, -458745, 1, 0, -393209, 1, 0, -327673, 1, 0, -262137, 1, 0, -196601, 1, 0, -131065, 1, 0, -65529, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, 393223, 1, 0, -458744, 1, 0, -393208, 1, 0, -327672, 1, 0, -262136, 1, 0, -196600, 1, 0, -131064, 1, 0, -65528, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, -458743, 1, 0, -393207, 1, 0, -327671, 1, 0, -262135, 1, 0, -196599, 1, 0, -131063, 1, 0, -65527, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 1, 0, -589841, 1, 0, -524305, 1, 0, -458769, 1, 0, -393233, 1, 0, -327697, 1, 0, -262161, 1, 0, -196625, 1, 0, -131089, 1, 0, -65553, 1, 0, -17, 1, 0, 65519, 1, 0, 131055, 1, 0, 196591, 1, 0, 262127, 1, 0, 327663, 1, 0, 393199, 1, 0, 458735, 1, 0, 524271, 1, 0, 589807, 1, 0, -589840, 1, 0, -524304, 1, 0, -458768, 1, 0, -393232, 1, 0, -327696, 1, 0, -262160, 1, 0, -196624, 1, 0, -131088, 1, 0, -65552, 1, 0, -16, 1, 0, 65520, 1, 0, 131056, 1, 0, 196592, 1, 0, 262128, 1, 0, 327664, 1, 0, 393200, 1, 0, 458736, 1, 0, 524272, 1, 0, 589808, 1, 0, -589839, 1, 0, -524303, 1, 0, -458767, 1, 0, -393231, 1, 0, -327695, 1, 0, -262159, 1, 0, -196623, 1, 0, -131087, 1, 0, -65551, 1, 0, -15, 1, 0, 65521, 1, 0, 131057, 1, 0, 196593, 1, 0, 262129, 1, 0, 327665, 1, 0, 393201, 1, 0, 458737, 1, 0, 524273, 1, 0, 589809, 1, 0, -589838, 1, 0, -524302, 1, 0, -458766, 1, 0, -393230, 1, 0, -327694, 1, 0, -262158, 1, 0, -196622, 1, 0, -131086, 1, 0, -65550, 1, 0, -14, 1, 0, 65522, 1, 0, 131058, 1, 0, 196594, 1, 0, 262130, 1, 0, 327666, 1, 0, 393202, 1, 0, 458738, 1, 0, 524274, 1, 0, 589810, 1, 0, -589837, 1, 0, -524301, 1, 0, -458765, 1, 0, 524275, 1, 0, 589811, 1, 0, -589836, 1, 0, -524300, 1, 0, -458764, 1, 0, 524276, 1, 0, 589812, 1, 0, -589835, 1, 0, -524299, 1, 0, -458763, 1, 0, 524277, 1, 0, 589813, 1, 0, -589834, 1, 0, -524298, 1, 0, -458762, 1, 0, 524278, 1, 0, 589814, 1, 0, -589833, 1, 0, -524297, 1, 0, -458761, 1, 0, 524279, 1, 0, 589815, 1, 0, -589832, 1, 0, -524296, 1, 0, -458760, 1, 0, 524280, 1, 0, 589816, 1, 0, -589831, 1, 0, -524295, 1, 0, -458759, 1, 0, 524281, 1, 0, 589817, 1, 0, -589830, 1, 0, -524294, 1, 0, -458758, 1, 0, 524282, 1, 0, 589818, 1, 0, -589829, 1, 0, -524293, 1, 0, -458757, 1, 0, 524283, 1, 0, 589819, 1, 0, -589828, 1, 0, -524292, 1, 0, -458756, 1, 0, 524284, 1, 0, 589820, 1, 0, -589827, 1, 0, -524291, 1, 0, -458755, 1, 0, 524285, 1, 0, 589821, 1, 0, -589826, 1, 0, -524290, 1, 0, -458754, 1, 0, 524286, 1, 0, 589822, 1, 0, -589825, 1, 0, -524289, 1, 0, -458753, 1, 0, 524287, 1, 0, 589823, 1, 0, -655360, 1, 0, -589824, 1, 0, -524288, 1, 0, 458752, 1, 0, 524288, 1, 0, -655359, 1, 0, -589823, 1, 0, -524287, 1, 0, 458753, 1, 0, 524289, 1, 0, -655358, 1, 0, -589822, 1, 0, -524286, 1, 0, 458754, 1, 0, 524290, 1, 0, -655357, 1, 0, -589821, 1, 0, -524285, 1, 0, 458755, 1, 0, 524291, 1, 0, -655356, 1, 0, -589820, 1, 0, -524284, 1, 0, 458756, 1, 0, 524292, 1, 0, -655355, 1, 0, -589819, 1, 0, -524283, 1, 0, 458757, 1, 0, 524293, 1, 0, -655354, 1, 0, -589818, 1, 0, -524282, 1, 0, 458758, 1, 0, 524294, 1, 0, -655353, 1, 0, -589817, 1, 0, -524281, 1, 0, 458759, 1, 0, 524295, 1, 0, -655352, 1, 0, -589816, 1, 0, -524280, 1, 0, 458760, 1, 0, 524296, 1, 0, -655351, 1, 0, -589815, 1, 0, -524279, 1, 0, 458761, 1, 0, 524297, 1, 0, -655350, 1, 0, -589814, 1, 0, -524278, 1, 0, -458742, 1, 0, -393206, 1, 0, -327670, 1, 0, -262134, 1, 0, -196598, 1, 0, -131062, 1, 0, -65526, 1, 0, 10, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 1, 0, -655349, 1, 0, -589813, 1, 0, -524277, 1, 0, -458741, 1, 0, -393205, 1, 0, -327669, 1, 0, -262133, 1, 0, -196597, 1, 0, -131061, 1, 0, -65525, 1, 0, 11, 1, 0, 65547, 1, 0, 131083, 1, 0, 196619, 1, 0, 262155, 1, 0, 327691, 1, 0, 393227, 1, 0, 458763, 1, 0, 524299, 1, 0, -655348, 1, 0, -589812, 1, 0, -524276, 1, 0, -458740, 1, 0, -393204, 1, 0, -327668, 1, 0, -262132, 1, 0, -196596, 1, 0, -131060, 1, 0, -65524, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 327692, 1, 0, 393228, 1, 0, 458764, 1, 0, 524300, 1, 0)
metadata/_edit_lock_ = true

[node name="Road_From" type="Path2D" parent="Environment"]
z_index = 1
curve = ExtResource("17_weurp")
script = ExtResource("22_kj5if")
_curve = ExtResource("17_weurp")
width = 365.0
width_profile = SubResource("Curve_5n1tl")
fill_texture = SubResource("CanvasTexture_3eptj")
fill_texture_mode = 1
cap_joint_mode = 2
border_antialiased = true

[node name="RoadLiner" type="Path2D" parent="Environment/Road_From"]
show_behind_parent = true
z_as_relative = false
curve = ExtResource("17_weurp")
script = ExtResource("22_kj5if")
_curve = ExtResource("17_weurp")
width = 470.0
width_profile = SubResource("Curve_5n1tl")
fill_texture = SubResource("CanvasTexture_xxt0j")
fill_texture_mode = 1
cap_joint_mode = 2
border_antialiased = true
metadata/_edit_lock_ = true

[node name="Road_Access" type="Path2D" parent="Environment"]
curve = ExtResource("20_3dk5m")
script = ExtResource("22_kj5if")
_curve = ExtResource("20_3dk5m")
width = 365.0
width_profile = SubResource("Curve_5n1tl")
fill_texture = SubResource("CanvasTexture_3eptj")
fill_texture_mode = 1
cap_joint_mode = 2
border_antialiased = true

[node name="RoadLiner" type="Path2D" parent="Environment/Road_Access"]
show_behind_parent = true
z_index = -2
curve = ExtResource("20_3dk5m")
script = ExtResource("22_kj5if")
_curve = ExtResource("20_3dk5m")
width = 470.0
width_profile = SubResource("Curve_5n1tl")
fill_texture = SubResource("CanvasTexture_xxt0j")
fill_texture_mode = 1
cap_joint_mode = 2
border_antialiased = true
metadata/_edit_lock_ = true

[node name="Skids" type="Node2D" parent="Environment"]
visible = false
position = Vector2(0, 57)
metadata/_edit_lock_ = true

[node name="Skid_L" type="Line2D" parent="Environment/Skids"]
z_index = 5
position = Vector2(-27, 0)
points = PackedVector2Array(0, 1000, 0, 0)
width_curve = ExtResource("19_veap2")
default_color = Color(0, 0, 0, 0.156863)
gradient = ExtResource("20_2olnn")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Skid_R" type="Line2D" parent="Environment/Skids"]
z_index = 5
position = Vector2(27, 0)
points = PackedVector2Array(0, 1000, 0, 0)
width_curve = ExtResource("19_veap2")
default_color = Color(0, 0, 0, 0.156863)
gradient = ExtResource("20_2olnn")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[connection signal="timeout" from="Timers/Timer_ToFirstDialogue" to="." method="_on_timer_to_first_dialogue_timeout"]
[connection signal="timeout" from="Timers/Timer_ToExit" to="." method="_on_timer_to_exit_timeout"]
